--- a/_sass/all.sass
+++ b/_sass/all.sass
@@ -1,13 +1,20 @@
-@charset "utf-8"
+// @charset "utf-8"
 
 @import "susy/language/susy"
+@import "bourbon/bourbon"
 @import "variables"
 @import "mixins"
 @import "base"
 @import "syntax-highlighting"
 
-body
+// 1322 grid
+$total-columns  : 12
+$column-width   : 90px
+$gutter-width   : 20px
+$susy: (columns: $total-columns,gutters: $gutter-width / $column-width, column-width: $column-width, global-box-sizing: border-box )
 
+body
+  +container()
   color: $text-color
   background-color: $background-color
   -webkit-text-size-adjust: 100%
