--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -2,32 +2,47 @@
 // Variables
 //================================
 
+// Bourbon
+$modular-scale-ratio: $major-second;
+//$modular-scale-base: 1.2em;
 
 $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-size:   1em;
-$base-font-weight: 400;
+$base-font-size:   modular-scale(0);
+
+// $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
-$base-line-height: 1.5;
-
-$spacing-unit:     30px;
-
-$text-color:       #111;
-
-$grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
-
+$spacing-unit:     modular-scale(2);
 
 $colors: (
   'background'   : #ccc,
   'hover'        : #f00,
-  'text'         : #111
+  'text'         : #111,
+  'gray'         : #828282
 );
+$breakpoints: (
+  mobile    : 481px,
+  tablet    : 768px,
+  desktop   : 1030px,
+  large     : 1240px
+);
+$rootsizes: (
+  mobile  :   modular-scale(0),
+  tablet  :   modular-scale(1),
+  desktop :   modular-scale(1),
+  large   :   modular-scale(2)
+);
+$lineheights: (
+  leading-1 :   modular-scale(3),
+  leading-2 :   modular-scale(3),
+  leading-3 :   modular-scale(3),
+  leading-4 :   modular-scale(3)
+);
+
+
+
 // Width of the content area
 $content-width:    800px;
 $on-palm:          600px;
 $on-laptop:        800px;
 
-// Bourbon
-// $modular-scale-base: 1.2em;
-// $modular-scale-base: 1.2em;
+
