Added anchor color

--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -17,6 +17,7 @@ $colors: (
   'background'   : #ccc,
   'hover'        : #f00,
   'text'         : #111,
+  'anchor'       : #bb8,
   'gray'         : #828282
 );
 $breakpoints: (
