--- a/_sass/all.sass
+++ b/_sass/all.sass
@@ -26,10 +26,8 @@ $susy: (columns: $total-columns,gutters: $gutter-width / $column-width, column-w
 // Globals
 //================================
 
-
-
-h1 h2, h3, h4, h5, h6, p, blockquote, pre, ul, ol, dl, figure, %vertical-rhythm
-  margin-bottom: $spacing-unit / 2
+p, blockquote, pre, ul, ol, dl, figure, %vertical-rhythm
+  margin-bottom: $spacing-unit
 
 img
   max-width: 100%
@@ -49,6 +47,7 @@ li > ul, > ol
   margin-bottom: 0
 
 h1, h2, h3, h4, h5, h6
+  @extend %vertical-rhythm
 
 a
   color: map_get($colors, 'anchor')
@@ -70,7 +69,7 @@ blockquote
 pre, code
   background-color: #eef
   border-radius: 3px
-  border: 1px solid map-get($colors, 'gray')-light
+  border: 1px solid map-get($colors, 'gray')
   font-size: 15px
 
 code
