--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -6,12 +6,6 @@
 $modular-scale-ratio: $minor-second;
 //$modular-scale-base: 1.2em;
 
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-size:   modular-scale(0);
-
-// $base-font-weight: 400;
-$small-font-size:  $base-font-size * 0.875;
-$spacing-unit:     modular-scale(2);
 
 $colors: (
   'background'   : #fff,
@@ -33,17 +27,14 @@ $rootsizes: (
   large   :   modular-scale(3)
 );
 $lineheights: (
-  leading-1 :   modular-scale(4),
-  leading-2 :   modular-scale(4),
-  leading-3 :   modular-scale(4),
-  leading-4 :   modular-scale(4)
+  leading-1 :   modular-scale(5),
+  leading-2 :   modular-scale(5),
+  leading-3 :   modular-scale(6),
+  leading-4 :   modular-scale(6)
 );
 
-
-
-// Width of the content area
-$content-width:    800px;
-$on-palm:          600px;
-$on-laptop:        800px;
-
+$sizes:   map-values($rootsizes);
+$points:  map-values($breakpoints);
+$leadings : map-values($lineheights);
+$breakpoints_total: length($breakpoints);
 
