--- a/css/all.sass
+++ b/css/all.sass
@@ -33,6 +33,8 @@
   opacity: 1
 
 body
+  padding-left: gutter()
+  padding-right: gutter()
   opacity: 0
   +font-smoothing
   +prefixer(font-feature-settings, "kern" 1, webkit moz o spec)
