--- a/css/all.sass
+++ b/css/all.sass
@@ -1,5 +1,5 @@
 ---
-# Only the main Sass file needs front matter (the dashes are enough)
+# Required front-matter (the dashes are enough)
 ---
 
 @charset "utf-8"
@@ -14,6 +14,7 @@
 @import 'base/susy/language/susy'
 @import 'base/normalize'
 @import 'base/variables'
+@import 'base/syntax-highlighting'
 
 //------------------------------------------------------------
 //
