Fix config, asset path

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,15 +11,15 @@
   <meta property="og:site_name" content="{{ site.title }}">
   <meta property="og:type" content="website">
 
-  {% assign asset_path = site.asset_path %}
+  {% assign asset_path = site.assets.asset_path %}
 
-  <link type="text/css" rel="stylesheet" href="{{ 'all.css' | prepend: '/css/' | prepend: asset_path }}">
+  <link type="text/css" rel="stylesheet" href="{{ 'all.css' | prepend: '/css/' | prepend: asset_path | replace: '//', '/' }}">
 
   {% assign stylesheets = page.stylesheets %}
 
   {% if stylesheets %}
     {% for style in stylesheets %}
-      <link type="text/css" rel="stylesheet" href="{{ style | prepend: 'css/' | prepend: asset_path }}">
+      <link type="text/css" rel="stylesheet" href="{{ style | prepend: 'css/' | prepend: asset_path | replace: '//', '/' }}">
     {% endfor %}
   {% endif %}
 
