--- a/css/all.sass
+++ b/css/all.sass
@@ -30,7 +30,7 @@
 //
 //------------------------------------------------------------
 
-.no-js body, .wf-active body, .wf-inactive body
+.js body, .no-js body, .wf-active body, .wf-inactive body
   opacity: 1
 
 body
@@ -40,6 +40,9 @@ body
   opacity: 0
   padding-left: gutter()
   padding-right: gutter()
+
+a
+  text-decoration: none
 
 img
   -ms-interpolation-mode: bicubic
