Add twitter card, update README

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,13 @@
   <meta property="og:site_name" content="{{ site.title }}">
   <meta property="og:type" content="website">
 
+  {% if site.twitter_username %}
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@{{ site.twitter_username }}" />
+  <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
+  <meta name="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
+  {% endif %}
+
   {% assign asset_path = site.assets.asset_path %}
 
   <link type="text/css" rel="stylesheet" href="{{ 'all.css' | prepend: '/css/' | prepend: asset_path | replace: '//', '/' }}">
