Remove unused sass stylesheet, update ignore file

--- a/css/all.sass
+++ b/css/all.sass
@@ -37,6 +37,7 @@ body
   +font-smoothing
   +prefixer(font-feature-settings, "kern" 1, webkit moz o spec)
   +rootsize
+  font-family: sans-serif
   opacity: 0
   padding-left: gutter()
   padding-right: gutter()
@@ -52,3 +53,5 @@ img
   height: auto !important
   max-width: 100%
   vertical-align: middle
+
+
