--- a/css/all.sass
+++ b/css/all.sass
@@ -33,10 +33,12 @@
   opacity: 1
 
 body
-  // +font-smoothing
+  +font-smoothing
   +prefixer(font-feature-settings, "kern" 1, webkit moz o spec)
   +rootsize
   opacity: 0
+  padding-left: modular-scale(-2)
+  padding-right: modular-scale(-2)
 
 a
   text-decoration: none
