--- a/css/all.sass
+++ b/css/all.sass
@@ -10,9 +10,7 @@
 //
 //------------------------------------------------------------
 
-@import 'base/bourbon/bourbon'
 @import 'base/normalize'
-@import 'base/variables'
 @import 'base/syntax-highlighting'
 
 //------------------------------------------------------------
@@ -29,16 +27,26 @@
 //
 //------------------------------------------------------------
 
+@media screen and (min-width: 320px)
+  \:root
+    font-size: calc(16px + (24 - 16) * (100vw - 320px)/(1600 - 320))
+    line-height: 1.5
+
+@media screen and (min-width: 1000px)
+  \:root
+    font-size: 22px
+
+@-ms-viewport
+  width: device-width
+
+*, *:before, *:after
+  box-sizing: border-box
+
 .js body, .no-js body, .wf-active body, .wf-inactive body
   opacity: 1
 
 body
-  +font-smoothing
-  +prefixer(font-feature-settings, "kern" 1, webkit moz o spec)
-  +rootsize
   opacity: 0
-  padding-left: modular-scale(-2)
-  padding-right: modular-scale(-2)
 
 a
   text-decoration: none
