--- a/css/all.sass
+++ b/css/all.sass
@@ -45,8 +45,14 @@
 .js body, .no-js body, .wf-active body, .wf-inactive body
   opacity: 1
 
+
+html, body
+  height: 100%
+
 body
   opacity: 0
+  display: flex
+  flex-direction: column
 
 a
   text-decoration: none
@@ -59,3 +65,15 @@ img
   height: auto !important
   max-width: 100%
   vertical-align: middle
+
+//------------------------------------------------------------
+//
+//  Structure
+//
+//------------------------------------------------------------
+
+.main
+  flex: 1 0 auto
+
+.footer
+  flex-shrink: 0
