--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,16 +1,16 @@
-<head prefix="og: http://ogp.me/ns#">
+<head{% if site.opengraph %} prefix="og: http://ogp.me/ns#"{% endif %}>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
   <title>{% if page.title %}{{ page.title }} — {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-
+  {%if site.opengraph %}
   <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
   <meta property="og:url" content="{{ site.url }}">
   <meta property="og:site_name" content="{{ site.title }}">
   <meta property="og:type" content="website">
-
+  {% endif %}
   {% if site.twitter_username %}
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@{{ site.twitter_username }}" />
@@ -20,7 +20,7 @@
 
   {% assign asset_path = site.assets.asset_path %}
 
-  <link type="text/css" rel="stylesheet" href="{{ 'all.css' | prepend: '/css/' | prepend: asset_path | replace: '//', '/' }}">
+  <link type="text/css" rel="stylesheet" href="{{ 'all.css' | prepend: 'css/' | prepend: asset_path | replace: '//', '/' }}">
 
   {% assign stylesheets = page.stylesheets %}
 
