Remove Modernizr, update baseurl

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,16 +1,18 @@
 <head{% if site.opengraph %} prefix="og: http://ogp.me/ns#"{% endif %}>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="x-ua-compatible" content="ie=edge" shrink-to-fit="no">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
   <title>{% if page.title %}{{ page.title }} — {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+
   {%if site.opengraph %}
   <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
   <meta property="og:url" content="{{ site.url }}">
   <meta property="og:site_name" content="{{ site.title }}">
   <meta property="og:type" content="website">
   {% endif %}
+
   {% if site.twitter_username %}
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@{{ site.twitter_username }}" />
@@ -20,13 +22,13 @@
 
   {% assign asset_path = site.assets.asset_path %}
 
-  <link type="text/css" rel="stylesheet" href="{{ 'all.css' | prepend: 'css/' | prepend: asset_path | replace: '//', '/' }}">
+  <link type="text/css" rel="stylesheet" href="{{ 'all.css' | prepend: 'css/' | prepend: asset_path| prepend: site.baseurl }}">
 
   {% assign stylesheets = page.stylesheets %}
 
   {% if stylesheets %}
     {% for style in stylesheets %}
-      <link type="text/css" rel="stylesheet" href="{{ style | prepend: 'css/' | prepend: asset_path | replace: '//', '/' }}">
+      <link type="text/css" rel="stylesheet" href="{{ style | prepend: 'css/' | prepend: asset_path | site.baseurl }}">
     {% endfor %}
   {% endif %}
 
@@ -36,8 +38,7 @@
    </style>
   {% endif %}
 
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url | replace: '//', '/' }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
-  <script src="{{ 'modernizr.js' | prepend: '/js/vendor/' | prepend: asset_path | replace: '//', '/' }}"></script>
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | replace: '//', '/' }}">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
 </head>
