--- a/css/all.sass
+++ b/css/all.sass
@@ -23,7 +23,7 @@
 
 //------------------------------------------------------------
 //
-//  Structure
+//  Global
 //
 //------------------------------------------------------------
 
@@ -41,10 +41,6 @@
 
 *, *:before, *:after
   box-sizing: border-box
-
-.js body, .no-js body, .wf-active body, .wf-inactive body
-  opacity: 1
-
 
 html, body
   height: 100%
@@ -71,6 +67,9 @@ img
 //  Structure
 //
 //------------------------------------------------------------
+
+.js body, .no-js body, .wf-active body, .wf-inactive body
+  opacity: 1
 
 .main
   flex: 1 0 auto
