--- a/css/all.sass
+++ b/css/all.sass
@@ -10,7 +10,7 @@
 //
 //------------------------------------------------------------
 
-@import 'base/normalize'
+// @import '../node_modules/normalize.css/normalize'
 @import 'base/syntax-highlighting'
 
 //------------------------------------------------------------
