Add normalize import

--- a/_sass/all.sass
+++ b/_sass/all.sass
@@ -1,16 +1,8 @@
----
-# Required front-matter (the dashes are enough)
----
+// ---
+// # Required front-matter (the dashes are enough)
+// ---
 
-@charset "utf-8"
-
-//------------------------------------------------------------
-//
-//  Base
-//
-//------------------------------------------------------------
-
-// @import '../node_modules/normalize.css/normalize'
+@import 'normalize.css/normalize'
 @import 'base/syntax-highlighting'
 
 //------------------------------------------------------------
