--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,6 @@
+---
+layout: compress
+---
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: 'en' }}" class="no-js">
 {% include head.html %}
